apps/httpserver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpserver-ingress
  namespace: default
  annotations:
 
spec:
  rules:
  - host: httpserver.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: httpserver-service
            port:
              number: 9088
